# ai-ops-assistant

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  env.docker.example  pyproject.toml
backend/app/: celery_worker.py  config.py  db.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  ingestions.py  orgs.py  projects.py
backend/app/crud/: ai_analyses.py  ingestions.py  organizations.py  projects.py  users.py
backend/app/dependencies/: auth_dependencies.py
backend/app/models/: __init__.py  ai_analysis.py  finding.py  findings.py  ingestion.py  log_event.py  log_events.py  org_member.py  organization.py  project.py  user.py  users.py
backend/app/schemas/: ingestions.py  orgs.py  projects.py  users.py
backend/app/security/: headers.py  jwt.py  password.py  rate_limit.py  user_rate_limit.py
backend/app/tasks/: findings_engine.py  ingestion_processing.py
backend/app/utils/: ai_insights.py  findings_rules.py  fingerprint.py  groq_client.py  log_parser.py  storage.py
backend/migrations/: env.py
backend/migrations/versions/: 3188860a88fa_add_ts_raw_attrs_parse_kind_parse_.py  577d9ec187c0_add_seq_column_for_log_event_and_.py  5e70ba0df0d8_cascade_on_deletion.py  7fe1052fa729_add_finding_status_to_ingestion_table.py  a766af5aa747_add_scope_type_scope_id_for_ai_analyses_.py  b16eaecb1e1a_add_matched_fingerprints_and_total_.py  c5d40fad8e04_add_name_for_users.py  c8c8644fed93_make_result_text_type.py  f3fcaeb25535_create_database_tables.py  fe22b6188068_make_analysis_per_scope_unique_per_.py
(+43 files in other folders)
